Added app icon to Prototype8

--- a/TouchTrackingPrototype8/TouchTrackingPrototype3/TouchTrackingPrototype3.Android/TouchTrackingPrototype3.Android.csproj
+++ b/TouchTrackingPrototype8/TouchTrackingPrototype3/TouchTrackingPrototype3.Android/TouchTrackingPrototype3.Android.csproj
@@ -98,14 +98,15 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\TouchTrackingPrototype3\TouchTrackingPrototype3.csproj">
       <Project>{72719FCF-D87C-4BE4-9F99-50309B4822DB}</Project>
       <Name>TouchTrackingPrototype3</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\n4klogo.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
